# BOOKSTORE

./: .env.dev  .gitignore  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/migrations/: 0001_initial.py
order/serializers/: order_serializers.py
order/tests/: test_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializers.py
product/tests/: test_category.py  test_product.py
product/tests/test_viewset/: test_product_viewset.py
product/viewsets/: product_viewset.py
